--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <body>
-<h3 style="size: 60px; color: 999; margin: auto; margin-top:30%;">is it linchtime rightnow?</h3>
-<h1 style="size: 90px; margin: auto;">maybe</h1>
+<h3 style="font-size: 60px; color: #999; margin-left: 35%; margin-top:30%;">
+  is it lunchtime right now?</h3>
+<h1 style="font-size: 90px; margin: auto;">maybe</h1>
+<p>hard to say, at this point.</p>
 </body>
 </html>
